java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 8
    it.options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'com.google.code.gson:gson:2.10.1'
}
